Sonarlint updates for Java 17